<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
                android:id="@+id/nav_dashboard"
                android:icon="@drawable/ic_dashboard_black_24dp"
                android:title="@string/dashboard" />

        <item
                android:id="@+id/nav_transfer"
                android:icon="@drawable/ic_transfer_black_24dp"
                android:title="@string/trasfer" />

        <item
                android:id="@+id/nav_reports"
                android:icon="@drawable/ic_report_black_24dp"
                android:title="@string/reports" />

        <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_arrow_back_black_24dp"
                android:title="@string/logout" />

    </group>
</menu>