<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/nav_graph"
            app:startDestination="@id/firstDashboardFragment"
            android:label="@string/dashboard">

    <fragment
            android:id="@+id/firstDashboardFragment"
            android:name="com.example.wallet.Fragments.DashboardFragment"
            android:label="@string/dashboard"
            tools:layout="@layout/fragment_dashboard" />
    <fragment
            android:id="@+id/secondTransferFragment"
            android:name="com.example.wallet.Fragments.TransferFragment"
            android:label="@string/trasfer"
            tools:layout="@layout/fragment_transfer" />
    <fragment
            android:id="@+id/thirdReportsFragment"
            android:name="com.example.wallet.Fragments.ReportsFragment"
            android:label="@string/reports"
            tools:layout="@layout/fragment_reports" />
</navigation>