<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center"
             tools:context=".Fragments.TransferFragment">

    <Spinner
            android:id="@+id/spinnerTransfer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittxt_item"
            android:spinnerMode="dropdown"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/enterNumber"
              android:background="@drawable/edittxt_item"
              android:padding="10dp"
              android:layout_marginLeft="10dp"
              android:layout_marginRight="10dp"
              android:layout_marginBottom="10dp"
              android:hint="@string/numberR"
    />

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/enterPrice"
              android:background="@drawable/edittxt_item"
              android:padding="10dp"
              android:layout_marginLeft="10dp"
              android:layout_marginRight="10dp"
              android:layout_marginBottom="10dp"
              android:hint="@string/countR"
    />
    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:background="@drawable/button_item"
            android:padding="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textStyle="bold"
            android:textSize="22dp"
    />


</LinearLayout>