<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".LoginActivity"
    >
        <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
        >

            <ImageView
                    android:layout_width="100dp"
                    android:background="@drawable/logo"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    android:layout_height="80dp"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_button"
                    android:gravity="center"
                    android:textColor="@color/background"
                    android:textStyle="bold"
                    android:fontFamily="cursive"
                    android:layout_marginBottom="60dp"
                    android:textSize="30dp"

            />
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/loginNumber"
                    android:background="@drawable/edittxt_item"
                    android:hint="@string/phoneNumber"
                    android:inputType="number"
                    android:padding="15dp"
                    android:layout_marginBottom="15dp"
                    android:textColorHint="@color/darkgrey"
            />

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    app:passwordToggleTint="@color/background"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleDrawable="@drawable/item_selector"
            >

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/loginPassword"
                        android:inputType="textPassword"
                        android:background="@drawable/edittxt_item"
                        android:hint="@string/password"
                        android:padding="15dp"
                        android:layout_marginBottom="15dp"
                        android:textColorHint="@color/darkgrey"/>

            </com.google.android.material.textfield.TextInputLayout>



            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_Btn"
                    android:text="@string/login_button"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:textColor="@color/white"
                    android:padding="10dp"
                    android:background="@drawable/button_item"
                    android:layout_marginBottom="20dp"
                    android:textSize="20dp"

            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/loginSignup"
                    android:text="@string/gotosignup"
                    android:textColor="@color/background"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="22dp"
                    android:layout_marginBottom="10dp"


            />
            <ProgressBar
                    android:layout_height="100dp"
                    android:layout_width="100dp"
                    android:layout_gravity="center"
                    android:id="@+id/progressBarlogin"
                    android:visibility="gone"/>
        </LinearLayout>
    </ScrollView>
