<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center"
             tools:context=".Fragments.DashboardFragment">
   <LinearLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_marginRight="20dp"
                 android:layout_marginLeft="20dp"
                 android:padding="10dp"
                 android:background="@drawable/creidt_item">
       <TextView android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/creidt"
                 android:gravity="center"
                 android:textColor="@color/white"
                 android:textSize="22dp"
                 android:paddingTop="10dp"
                 android:textStyle="bold"
                 android:paddingBottom="10dp"
       />
       <TextView android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="10500 جنيه"
                 android:textStyle="bold"
                 android:textSize="20dp"
                 android:gravity="center"
                 android:paddingBottom="10dp"
                 android:textColor="@color/white"
       />
   </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:background="@drawable/transfer_item"
                  android:layout_marginRight="20dp"
                  android:layout_marginLeft="20dp"
                  android:padding="10dp"
                  android:layout_marginTop="20dp">
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/transfered"
                  android:gravity="center"
                  android:textColor="@color/white"
                  android:textSize="22dp"
                  android:textStyle="bold"
                  android:paddingTop="10dp"
                  android:paddingBottom="10dp"
        />
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="140 جنيه"
                  android:textStyle="bold"
                  android:textSize="20dp"
                  android:gravity="center"
                  android:paddingBottom="10dp"
                  android:textColor="@color/white"
        />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:background="@drawable/operation_item"
                  android:layout_marginTop="20dp"
                  android:layout_marginRight="20dp"
                  android:layout_marginLeft="20dp"
                  android:padding="10dp"
    >
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/operationstatement"
                  android:gravity="center"
                  android:textColor="@color/white"
                  android:textSize="22dp"
                  android:textStyle="bold"
                  android:paddingTop="10dp"
                  android:paddingBottom="10dp"
        />
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="4 عملية"
                  android:textStyle="bold"
                  android:textSize="20dp"
                  android:paddingBottom="10dp"
                  android:gravity="center"
                  android:textColor="@color/white"
        />
    </LinearLayout>
</LinearLayout>